@@ -1,3 +1,9 @@
+2009-02-16  Stefan Kost  <ensonic@users.sf.net>
+
+	* style.css:
+	* tests/gobject/src/gobject.c:
+	  Also style <note> tags.
+
 2009-02-10  Stefan Kost  <ensonic@users.sf.net>
 
 	* MAINTAINERS:
